Add two more common fields in BaseQuizDTO